@@ -49,6 +49,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   replaced before inotify watches were created.
   [bug introduced in coreutils-7.5]
 
+  tail --follow consistently outputs all data for a truncated file.
+  [bug introduced in the beginning]
+
 ** New features
 
   chroot accepts the new --skip-chdir option to not change the working directory
